fix: chat box container overlaping issue

--- a/src/pages/LiveVideo/components/ChatBox/chatBox.css
+++ b/src/pages/LiveVideo/components/ChatBox/chatBox.css
@@ -45,6 +45,7 @@
   position: absolute;
   bottom: 8%;
   margin-left: 1rem;
+  z-index: 1;
 }
 
 @media only screen and (max-width: 950px) {
